--- a/app/src/main/res/layout/activity_key_gear_item_detail.xml
+++ b/app/src/main/res/layout/activity_key_gear_item_detail.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".feature.keygear.ui.itemdetail.KeyGearItemDetailActivity">
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/scrollView"
@@ -14,8 +14,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            tools:context=".feature.keygear.ui.itemdetail.KeyGearItemDetailActivity">
+            android:orientation="vertical">
 
             <FrameLayout
                 android:layout_width="match_parent"
@@ -59,14 +58,54 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/base_margin_quintuple">
 
+                <!-- TODO: Replace with proper icon -->
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/ic_receipt"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="@dimen/base_margin_triple"
+                    android:contentDescription="@null"
+                    tools:layout_height="24dp"
+                    tools:layout_width="24dp"
+                    tools:src="@drawable/ic_fire_green" />
+
+                <TextView
+                    style="@style/Body.Regular"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/base_margin_triple"
+                    android:text="@string/KEY_GEAR_ITEM_VIEW_RECEIPT_CELL_TITLE" />
+
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1" />
+
+                <Button
+                    android:id="@+id/addOrViewReceipt"
+                    style="@style/Body.Regular.Link"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/base_margin_triple"
+                    android:background="?attr/selectableItemBackground"
+                    android:textAllCaps="false"
+                    android:textColor="@color/link_purple"
+                    android:theme="@style/Body.Regular.Link"
+                    tools:text="@string/KEY_GEAR_ITEM_VIEW_RECEIPT_CELL_ADD_BUTTON" />
 
             </LinearLayout>
+
+            <TextView
+                style="@style/Body.XSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/base_margin_double"
+                android:layout_marginTop="@dimen/base_margin_double"
+                android:layout_marginEnd="@dimen/base_margin_double"
+                android:text="@string/KEY_GEAR_ITEM_VIEW_RECEIPT_TABLE_FOOTER" />
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
