--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -161,5 +161,6 @@
     <dimen name="top_bar_elevation">2dp</dimen>
     <dimen name="post_create_z_translation">7dp</dimen>
     <dimen name="key_gear_item_elevation">2dp</dimen>
+    <dimen name="horizontal_line_height">1dp</dimen>
 
 </resources>
