--- a/app/src/main/res/layout/activity_key_gear_valuation.xml
+++ b/app/src/main/res/layout/activity_key_gear_valuation.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/chat_top_bar_height"
         android:background="@color/background"
-        android:elevation="2dp"
+        android:elevation="@dimen/top_bar_elevation"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:paddingStart="@dimen/base_margin"
