--- a/app/src/main/res/layout/fragment_key_gear.xml
+++ b/app/src/main/res/layout/fragment_key_gear.xml
@@ -13,15 +13,65 @@
 
         <include layout="@layout/loading_spinner" />
 
+        <!-- TODO: Add actual illustration -->
+        <ImageView
+            android:id="@+id/illustration"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/base_margin_double"
+            android:layout_marginTop="@dimen/base_margin_double"
+            android:layout_marginEnd="@dimen/base_margin_double"
+            android:contentDescription="@null"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/claims_illustration"
+            tools:visibility="visible" />
+
+        <TextView
+            android:id="@+id/title"
+            style="@style/Headline.Large"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/base_margin_triple"
+            android:layout_marginTop="@dimen/base_margin_quintuple"
+            android:layout_marginEnd="@dimen/base_margin_triple"
+            android:text="@string/KEY_GEAR_START_EMPTY_HEADLINE"
+            android:textAlignment="center"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/illustration"
+            tools:visibility="visible" />
+
+        <TextView
+            android:id="@+id/description"
+            style="@style/Body.Small"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/base_margin_triple"
+            android:layout_marginTop="@dimen/base_margin"
+            android:layout_marginEnd="@dimen/base_margin_triple"
+            android:text="@string/KEY_GEAR_START_EMPTY_BODY"
+            android:textAlignment="center"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/title"
+            tools:visibility="visible" />
+
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/items"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/base_margin_quintuple"
             android:visibility="gone"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/description"
             app:spanCount="2"
             tools:itemCount="3"
             tools:listitem="@layout/key_gear_item"
