--- a/app/src/main/res/layout/date_pick_layout.xml
+++ b/app/src/main/res/layout/date_pick_layout.xml
@@ -35,10 +35,9 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <!--TODO customizable hint background-->
     <TextView
         android:id="@+id/dateHint"
-        style="@style/Body"
+        style="@style/Body.Regular"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
