--- a/app/src/main/res/layout/activity_key_gear_valuation.xml
+++ b/app/src/main/res/layout/activity_key_gear_valuation.xml
@@ -48,7 +48,7 @@
     <com.hedvig.app.ui.view.HedvigEditText
         android:id="@+id/priceInput"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/date_pick_button_height"
+        android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/base_margin_triple"
         android:layout_marginTop="@dimen/base_margin_triple"
         android:layout_marginEnd="@dimen/base_margin_triple"
@@ -60,7 +60,7 @@
     <com.hedvig.app.ui.view.DateInputView
         android:id="@+id/dateInput"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/date_pick_button_height"
+        android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/base_margin_triple"
         android:layout_marginTop="@dimen/base_margin_triple"
         android:layout_marginEnd="@dimen/base_margin_triple"
