--- a/app/src/main/res/layout/hedvig_edit_text.xml
+++ b/app/src/main/res/layout/hedvig_edit_text.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:parentTag="android.widget.FrameLayout"
+    tools:layout_height="wrap_content">
 
     <FrameLayout
         android:id="@+id/datePickLayout"
