Refactor Item Detail to use viewbinders, and start implementing valuation/deductible section

--- a/app/src/main/res/layout/activity_key_gear_item_detail.xml
+++ b/app/src/main/res/layout/activity_key_gear_item_detail.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root"
     android:layout_width="match_parent"
@@ -17,31 +16,13 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+            <include
+                android:id="@+id/photosSection"
+                layout="@layout/key_gear_item_detail_photos_section" />
 
-                <androidx.viewpager2.widget.ViewPager2
-                    android:id="@+id/photos"
-                    android:layout_width="match_parent"
-                    android:layout_height="480dp" />
-
-                <com.hedvig.app.ui.view.PagerIndicatorView
-                    android:id="@+id/pagerIndicator"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal|bottom"
-                    android:layout_marginBottom="@dimen/base_margin_double" />
-
-            </FrameLayout>
-
-            <TextView
-                style="@style/Headline.Medium"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/base_margin_triple"
-                android:layout_marginTop="@dimen/base_margin_quintuple"
-                android:text="@string/KEY_GEAR_ITEM_VIEW_COVERAGE_TABLE_TITLE" />
+            <include
+                android:id="@+id/valuationSection"
+                layout="@layout/key_gear_item_detail_valuation_section" />
 
             <View
                 android:layout_width="match_parent"
@@ -49,61 +30,9 @@
                 android:layout_marginTop="@dimen/base_margin_quintuple"
                 android:background="@color/separator" />
 
-            <TextView
-                style="@style/Headline.Medium"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/base_margin_triple"
-                android:layout_marginTop="@dimen/base_margin_quintuple"
-                android:text="@string/KEY_GEAR_ITEM_VIEW_RECEIPT_TABLE_TITLE" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/base_margin_quintuple">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="@dimen/base_margin_triple"
-                    android:contentDescription="@null"
-                    app:srcCompat="@drawable/ic_receipt" />
-
-                <TextView
-                    style="@style/Body.Regular"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/base_margin_triple"
-                    android:text="@string/KEY_GEAR_ITEM_VIEW_RECEIPT_CELL_TITLE" />
-
-                <Space
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
-
-                <Button
-                    android:id="@+id/addOrViewReceipt"
-                    style="@style/Body.Regular.Link"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/base_margin_triple"
-                    android:background="?attr/selectableItemBackground"
-                    android:textAllCaps="false"
-                    android:textColor="@color/link_purple"
-                    android:theme="@style/Body.Regular.Link"
-                    tools:text="@string/KEY_GEAR_ITEM_VIEW_RECEIPT_CELL_ADD_BUTTON" />
-
-            </LinearLayout>
-
-            <TextView
-                style="@style/Body.XSmall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/base_margin_double"
-                android:layout_marginTop="@dimen/base_margin_double"
-                android:layout_marginEnd="@dimen/base_margin_double"
-                android:text="@string/KEY_GEAR_ITEM_VIEW_RECEIPT_TABLE_FOOTER" />
+            <include
+                android:id="@+id/receiptSection"
+                layout="@layout/key_gear_item_detail_receipt_section" />
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
