A really good-looking animation for the transitionary state

--- a/app/src/main/res/layout/activity_create_key_gear_item.xml
+++ b/app/src/main/res/layout/activity_create_key_gear_item.xml
@@ -55,22 +55,41 @@
 
     </androidx.core.widget.NestedScrollView>
 
-    <Button
-        android:id="@+id/save"
-        style="@style/HedvigButton"
+    <FrameLayout
+        android:id="@+id/saveContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center_horizontal"
         android:layout_marginStart="@dimen/base_margin_quadruple"
         android:layout_marginEnd="@dimen/base_margin_quadruple"
         android:layout_marginBottom="@dimen/base_margin_quadruple"
+        android:background="@drawable/button_primary"
         android:backgroundTint="@color/link_purple"
-        android:text="@string/KEY_GEAR_ADD_ITEM_SAVE_BUTTON"
-        android:textColor="@color/white"
         android:translationY="140dp"
         android:visibility="gone"
         tools:translationY="0dp"
-        tools:visibility="visible" />
+        tools:visibility="visible">
+
+        <ProgressBar
+            android:id="@+id/loadingIndicator"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:scaleX="0.7"
+            android:scaleY="0.7"
+            android:visibility="gone" />
+
+        <Button
+            android:id="@+id/save"
+            style="?attr/borderlessButtonStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/KEY_GEAR_ADD_ITEM_SAVE_BUTTON"
+            android:textAllCaps="false"
+            android:textColor="@color/white" />
+
+    </FrameLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/postCreate"
