--- a/app/src/main/res/layout/activity_key_gear_valuation.xml
+++ b/app/src/main/res/layout/activity_key_gear_valuation.xml
@@ -69,6 +69,7 @@
     <Button
         android:id="@+id/continueButton"
         style="@style/HedvigButton.Purple"
+        android:enabled="false"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/base_margin_triple"
