Add illustrations as fallback when no photo exists.
This had major implications for the shared element transitions, and as such there's a lot of code around it!

Bonus: Update LeakCanary

--- a/app/src/main/res/layout/fragment_key_gear.xml
+++ b/app/src/main/res/layout/fragment_key_gear.xml
@@ -9,6 +9,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
+        android:paddingBottom="@dimen/bottom_navigation_height"
         android:layout_height="wrap_content">
 
         <include layout="@layout/loading_spinner" />
