--- a/app/src/main/res/layout/key_gear_item.xml
+++ b/app/src/main/res/layout/key_gear_item.xml
@@ -3,6 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/keyGearItemRoot"
+    android:background="@drawable/background_rounded_corners"
+    android:backgroundTint="@color/dark_purple"
     android:layout_width="match_parent"
     android:layout_height="@dimen/key_gear_card_height"
     tools:layout_width="160dp">
@@ -13,7 +15,8 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:contentDescription="@null"
-        tools:src="@drawable/ic_fire_green" />
+        tools:src="@drawable/illustration_phone" />
+
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
