--- a/app/src/main/res/values/text_styles.xml
+++ b/app/src/main/res/values/text_styles.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="text_xxxlarge">38sp</dimen>
     <dimen name="text_xxlarge">32sp</dimen>
     <dimen name="text_xlarge">24sp</dimen>
     <dimen name="text_large">18sp</dimen>
@@ -15,6 +16,10 @@
     <style name="Header">
         <item name="android:fontFamily">@font/soray_extrabold</item>
         <item name="android:textColor">@color/text_emphasized</item>
+    </style>
+
+    <style name="Header.xLarge">
+        <item name="android:textSize">@dimen/text_xxxlarge</item>
     </style>
 
     <style name="Header.Large">
