added mock data

--- a/app/src/main/res/layout/activity_key_gear_valuation_info.xml
+++ b/app/src/main/res/layout/activity_key_gear_valuation_info.xml
@@ -52,6 +52,7 @@
         android:text="@string/KEY_GEAR_ITEM_VIEW_VALUATION_PERCENTAGE_LABEL" />
 
     <TextView
+        android:id="@+id/body"
         style="@style/Body"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
