--- a/app/src/main/res/layout/activity_key_gear_valuation_info.xml
+++ b/app/src/main/res/layout/activity_key_gear_valuation_info.xml
@@ -39,7 +39,7 @@
 
     <TextView
         android:id="@+id/valuationPercentage"
-        style="@style/Header.xLarge"
+        style="@style/Headline.xLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/base_margin_quadruple"
