--- a/app/src/main/res/layout/fragment_key_gear.xml
+++ b/app/src/main/res/layout/fragment_key_gear.xml
@@ -27,7 +27,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:src="@drawable/claims_illustration"
+            app:srcCompat="@drawable/illustration_key_gear"
             tools:visibility="visible" />
 
         <TextView
